--- a/Gonky Kong/Assembly-CSharp.csproj
+++ b/Gonky Kong/Assembly-CSharp.csproj
@@ -69,7 +69,7 @@
     <Compile Include="Assets\Scripts\EnemyShooting.cs" />
     <Compile Include="Assets\Scripts\GameData.cs" />
     <Compile Include="Assets\Scripts\GameManager.cs" />
-    <Compile Include="Assets\Scripts\HealthBar.cs" />
+    <Compile Include="Assets\Scripts\Health.cs" />
     <Compile Include="Assets\Scripts\Player.cs" />
     <Compile Include="Assets\Scripts\Playermovment.cs" />
     <Compile Include="Assets\Scripts\Score.cs" />
